--- a/index.html
+++ b/index.html
@@ -28,49 +28,53 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <style>
-    .zoom-effect {
-      transition: transform 0.3s ease;
-    }
-  
-    .zoom-effect:hover {
-      transform: scale(1.1);
-    }
+
   </style>
-
-
 </head>
 
 
 
 <body>
 
-  <nav class="navbar navbar-expand-md navbar-light bg-light">
+
+  <header class=" sticky-top navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="#">
         <img src="assets/img/logo.png" class="img-fluid" alt="" style="width: 65px;">
       </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Services
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+              <li><a class="dropdown-item" href="https://wa.me/message/6MT7XQSH65SNI1">Software Maintainance</a></li>
+              <li><a class="dropdown-item" href="https://wa.me/message/6MT7XQSH65SNI1">Software Development</a></li>
+              <li><a class="dropdown-item" href="https://wa.me/message/6MT7XQSH65SNI1">Batabase Management</a></li>
+              <li><a class="dropdown-item" href="https://wa.me/message/6MT7XQSH65SNI1">Selling Accesories</a></li>
             </ul>
-        </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://wa.me/message/6MT7XQSH65SNI1">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
-</nav>
+  </header>  
+
 
 <!-- Start Hero -->
 <section id="hero">
