--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <div class="col-md-3">
             <div class="card shadow-sm">
               <div style="width: 100%; height: 225px; overflow: hidden;">
-                <img class="bd-placeholder-img card-img-top" src="assets/img/slide/slide-1.jpeg" alt="Your Image" role="img" aria-label="Your Image" style="object-fit: cover; width: 100%; height: 100%;" focusable="false">
+                <img class="zoom-effect bd-placeholder-img card-img-top" src="assets/img/slide/slide-1.jpeg" alt="Your Image" role="img" aria-label="Your Image" style="object-fit: cover; width: 100%; height: 100%;" focusable="false">
               </div>
               <div class="card-body">
                 <h4 class="card-title">Software Development</h4>
@@ -177,7 +177,7 @@
           <div class="col-md-3">
             <div class="card shadow-sm">
               <div style="width: 100%; height: 225px; overflow: hidden;">
-                <img class="bd-placeholder-img card-img-top" src="assets/img/slide/slide-2.jpeg" alt="Your Image" role="img" aria-label="Your Image" style="object-fit: cover; width: 100%; height: 100%;" focusable="false">
+                <img class="zoom-effect bd-placeholder-img card-img-top" src="assets/img/slide/slide-2.jpeg" alt="Your Image" role="img" aria-label="Your Image" style="object-fit: cover; width: 100%; height: 100%;" focusable="false">
               </div>
               <div class="card-body">
                 <h4 class="card-title">Software Development</h4>
@@ -196,7 +196,7 @@
           <div class="col-md-3">
             <div class="card shadow-sm">
               <div style="width: 100%; height: 225px; overflow: hidden;">
-                <img class="bd-placeholder-img card-img-top" src="assets/img/slide/slide-3.jpeg" alt="Your Image" role="img" aria-label="Your Image" style="object-fit: cover; width: 100%; height: 100%;" focusable="false">
+                <img class="zoom-effect bd-placeholder-img card-img-top" src="assets/img/slide/slide-3.jpeg" alt="Your Image" role="img" aria-label="Your Image" style="object-fit: cover; width: 100%; height: 100%;" focusable="false">
               </div>
               <div class="card-body">
                 <h4 class="card-title">Software Development</h4>
@@ -215,7 +215,7 @@
           <div class="col-md-3">
             <div class="card shadow-sm">
               <div style="width: 100%; height: 225px; overflow: hidden;">
-                <img class="bd-placeholder-img card-img-top" src="assets/img/slide/slide-1.jpeg" alt="Your Image" role="img" aria-label="Your Image" style="object-fit: cover; width: 100%; height: 100%;" focusable="false">
+                <img class="zoom-effect bd-placeholder-img card-img-top" src="assets/img/slide/slide-1.jpeg" alt="Your Image" role="img" aria-label="Your Image" style="object-fit: cover; width: 100%; height: 100%;" focusable="false">
               </div>
               <div class="card-body">
                 <h4 class="card-title">Software Development</h4>
@@ -635,5 +635,4 @@
   
 
 </body>
-
 </html>
