--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown"><span>Mr.</span> Abraham</h2>
-                <p class="animate__animated animate__fadeInUp">My name is Mr. Abraham, and I am an HR and software development professional based in Dar es Salaam. With extensive experience in these fields, I am committed to meeting your HR and software needs.</p>
+                <p class="animate__animated animate__fadeInUp">My name is Mr. Abraham, a Banker with HR and software development professional experience with a diverse skill set. I excel in bridging the gap between Banking Operations as well HR and software development, optimizing processes, and driving organizational success. Committed to excellence and innovation, I contribute to team growth while delivering tangible results.</p>
                 <div>
                   <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-menu animate__animated animate__fadeInUp scrollto">See More</a>
                   <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-book animate__animated animate__fadeInUp scrollto">Set started</a>
