--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown"><span>Mr.</span> Abraham</h2>
-                <p class="animate__animated animate__fadeInUp">My name is Mr. Abraham, a Banker with HR and frontend software development professional experience with a diverse skill set. I excel in bridging the gap between Banking Operations as well HR and software development, optimizing processes, and driving organizational success. Committed to excellence and innovation, I contribute to team growth while delivering tangible results.</p>
-                <div>
-                  <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-menu animate__animated animate__fadeInUp scrollto">See More</a>
+                <p class="animate__animated animate__fadeInUp" style="font-size: larger; font-style: italic;">My name is Mr. Abraham, a Banker with extensive experience in HR and frontend software development. I possess a diverse skill set and excel in bridging the gap between Banking Operations, HR, and software development. My expertise lies in optimizing processes and driving organizational success. I am committed to excellence and innovation, and I consistently contribute to team growth while delivering tangible results.</p>                  <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-menu animate__animated animate__fadeInUp scrollto">See More</a>
                   <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-book animate__animated animate__fadeInUp scrollto">Set started</a>
                 </div>
               </div>
