--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown"><span>Mr.</span> Abraham</h2>
-                <p class="animate__animated animate__fadeInUp" style="font-size: larger; font-style: italic;">My name is Mr. Abraham, a Banker with extensive experience in HR and frontend software development. I possess a diverse skill set and excel in bridging the gap between Banking Operations, HR, and software development. My expertise lies in optimizing processes and driving organizational success. I am committed to excellence and innovation, and I consistently contribute to team growth while delivering tangible results.</p>                  <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-menu animate__animated animate__fadeInUp scrollto">See More</a>
-                  <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-book animate__animated animate__fadeInUp scrollto">Set started</a>
-                </div>
+                <p class="animate__animated animate__fadeInUp" style="font-size: larger; font-style: italic;">My name is Mr. Abraham, a Banker with extensive experience in HR and frontend software development. I possess a diverse skill set and excel in bridging the gap between Banking Operations, HR, and software development. My expertise lies in optimizing processes and driving organizational success. I am committed to excellence and innovation, and I consistently contribute to team growth while delivering tangible results.</p>                  
+                <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-menu animate__animated animate__fadeInUp scrollto">See More</a>
+                <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-book animate__animated animate__fadeInUp scrollto">Set started</a>
+              </div>
               </div>
             </div>
           </div>
@@ -107,7 +108,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown"><span>Mr.</span> Abraham</h2>
-                <p class="animate__animated animate__fadeInUp">My name is Mr. Abraham, and I am an HR and software development professional based in Dar es Salaam. With extensive experience in these fields, I am committed to meeting your HR and software needs.</p>
+                <p class="animate__animated animate__fadeInUp" style="font-size: larger; font-style: italic;">My name is Mr. Abraham, a Banker with extensive experience in HR and frontend software development. I possess a diverse skill set and excel in bridging the gap between Banking Operations, HR, and software development. My expertise lies in optimizing processes and driving organizational success. I am committed to excellence and innovation, and I consistently contribute to team growth while delivering tangible results.</p>                  
                 <div>
                   <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-menu animate__animated animate__fadeInUp scrollto">See More</a>
                   <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-book animate__animated animate__fadeInUp scrollto">Set started</a>
@@ -121,7 +122,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown"><span>Mr.</span> Abraham</h2>
-                <p class="animate__animated animate__fadeInUp">My name is Mr. Abraham, and I am an HR and software development professional based in Dar es Salaam. With extensive experience in these fields, I am committed to meeting your HR and software needs.</p>
+                <p class="animate__animated animate__fadeInUp" style="font-size: larger; font-style: italic;">My name is Mr. Abraham, a Banker with extensive experience in HR and frontend software development. I possess a diverse skill set and excel in bridging the gap between Banking Operations, HR, and software development. My expertise lies in optimizing processes and driving organizational success. I am committed to excellence and innovation, and I consistently contribute to team growth while delivering tangible results.</p>                  
                 <div>
                   <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-menu animate__animated animate__fadeInUp scrollto">See More</a>
                   <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-book animate__animated animate__fadeInUp scrollto">Set started</a>
@@ -131,15 +132,17 @@
           </div>
 
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        
+        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev" style="font-size: 2rem; color: #ffffff;">
+          <span class="bi bi-chevron-left" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next" style="font-size: 2rem; color: #ffffff;">
+          <span class="bi bi-chevron-right" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+       </div>
 
       </div>
     </div>
