--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h2 class="animate__animated animate__fadeInDown"><span>Mr.</span> Abraham</h2>
                 <p class="animate__animated animate__fadeInUp" style="font-size: larger; font-style: italic;">My name is Mr. Abraham, a Banker with extensive experience in HR and frontend software development. I possess a diverse skill set and excel in bridging the gap between Banking Operations, HR, and software development. My expertise lies in optimizing processes and driving organizational success. I am committed to excellence and innovation, and I consistently contribute to team growth while delivering tangible results.</p>                  
                 <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-menu animate__animated animate__fadeInUp scrollto">See More</a>
-                <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-book animate__animated animate__fadeInUp scrollto">Set started</a>
+                <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-book animate__animated animate__fadeInUp scrollto">Get started</a>
               </div>
               </div>
             </div>
@@ -111,7 +111,7 @@
                 <p class="animate__animated animate__fadeInUp" style="font-size: larger; font-style: italic;">My name is Mr. Abraham, a Banker with extensive experience in HR and frontend software development. I possess a diverse skill set and excel in bridging the gap between Banking Operations, HR, and software development. My expertise lies in optimizing processes and driving organizational success. I am committed to excellence and innovation, and I consistently contribute to team growth while delivering tangible results.</p>                  
                 <div>
                   <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-menu animate__animated animate__fadeInUp scrollto">See More</a>
-                  <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-book animate__animated animate__fadeInUp scrollto">Set started</a>
+                  <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-book animate__animated animate__fadeInUp scrollto">Get started</a>
                 </div>
               </div>
             </div>
@@ -125,14 +125,14 @@
                 <p class="animate__animated animate__fadeInUp" style="font-size: larger; font-style: italic;">My name is Mr. Abraham, a Banker with extensive experience in HR and frontend software development. I possess a diverse skill set and excel in bridging the gap between Banking Operations, HR, and software development. My expertise lies in optimizing processes and driving organizational success. I am committed to excellence and innovation, and I consistently contribute to team growth while delivering tangible results.</p>                  
                 <div>
                   <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-menu animate__animated animate__fadeInUp scrollto">See More</a>
-                  <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-book animate__animated animate__fadeInUp scrollto">Set started</a>
+                  <a href="https://wa.me/message/6MT7XQSH65SNI1" class="btn-book animate__animated animate__fadeInUp scrollto">Get started</a>
                 </div>
               </div>
             </div>
           </div>
 
         </div>
-        
+
         <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev" style="font-size: 2rem; color: #ffffff;">
           <span class="bi bi-chevron-left" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
