--- a/loancalcul.html
+++ b/loancalcul.html
@@ -1,62 +1,4 @@
-<?php
-$error = ''; // Initialize an error variable to store error messages
-$result = ''; // Initialize a result variable to store the calculation results
 
-if ($_SERVER["REQUEST_METHOD"] == "POST") {
-    // Check if all required fields are set
-    $required_fields = ['loan_type', 'interest_rate', 'tenor_months', 'proposedLoanAmount', 'existingFacilityBalance', 'ablExistingMonthlyInstallment', 'installWithOtherBanks', 'netSalary', 'basicsalary', 'total_allowances'];
-    $missing_fields = false;
-
-    foreach ($required_fields as $field) {
-        if (!isset($_POST[$field])) {
-            $missing_fields = true;
-            break;
-        }
-    }
-
-    if ($missing_fields) {
-        $error = "Oops! Some fields are missing or contain invalid input.";
-    } else {
-        // Extract input values
-        $loan_type = $_POST['loan_type'];
-        $interest_rate = floatval($_POST['interest_rate']);
-        $tenor_months = intval($_POST['tenor_months']);
-        $proposedLoanAmount = floatval($_POST['proposedLoanAmount']);
-        $existingFacilityBalance = floatval($_POST['existingFacilityBalance']);
-        $ablExistingMonthlyInstallment = floatval($_POST['ablExistingMonthlyInstallment']);
-        $installWithOtherBanks = floatval($_POST['installWithOtherBanks']);
-        $netSalary = floatval($_POST['netSalary']);
-        $basicsalary = intval($_POST['basicsalary']);
-        $total_allowances = intval($_POST['total_allowances']);
-
-        if ($tenor_months <= 0 || $proposedLoanAmount <= 0) {
-            $error = "Uh-oh! Tenor and Proposed Loan Amount should be greater than zero.";
-        } else {
-
-        // Calculate the adjusted net fixed salary ✅
-        $adjustedNetFixedSalary = $netSalary + $ablExistingMonthlyInstallment - $total_allowances; 
-        $deductionLimit = $basicsalary / 3;
-        $totalfacility = $proposedLoanAmount + $existingFacilityBalance;
-        $monthlyInstallment = $totalfacility * ($interest_rate / 12) * pow(1 + $interest_rate / 12, $tenor_months) / ((pow(1 + $interest_rate / 12, $tenor_months) - 1));
-        $totalDeductions = $monthlyInstallment + $installWithOtherBanks;
-        $netSalaryAfterDeductions = $adjustedNetFixedSalary - $totalDeductions;
-        $debtRatio = (1 - ($netSalaryAfterDeductions / $basicsalary)) * 100;
-        $grossSalary = $basicsalary + $total_allowances;
-
-        // Prepare the result message
-        $result .= "adjustedNetFixedSalary: TZS " . number_format($adjustedNetFixedSalary, 2) . "<br>";
-        $result .= "deductionLimit : TZS " . number_format($deductionLimit, 2) . "<br>";
-        $result .= "monthlyInstallment : TZS " . number_format($monthlyInstallment, 2) . "<br>";
-        $result .= "totalDeductions: TZS " . number_format($totalDeductions, 2) . "<br>";
-        $result .= "netSalaryAfterDeductions: TZS " . number_format($netSalaryAfterDeductions, 2) . "<br>";
-        $result .= "Debt Ratio: " . number_format($debtRatio) . "%<br>";
-        $result .= "Total Facility: TZS " . number_format($totalfacility). "%<br>";
-        $result .= "grossSalary : TZS " . number_format($grossSalary). "%<br>";
-
-        }
-    }
-}
-?>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -141,15 +83,15 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <!-- ======= Portfolio Details Section ======= -->
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
-
-        <div class="row gy-4">
-
-
-                    <!-- Display calculation results -->
-                    <?php if (!empty($result)) : ?>
+  <!-- Your HTML content here -->
+  <section id="portfolio-details" class="portfolio-details">
+    <div class="container">
+      <div class="row gy-4">
+        <!-- Display calculation results -->
+        <div class="alert alert-success" id="calculation-results" style="display: none;">
+          <h4>Calculation Results:</h4>
+                              <!-- Display calculation results -->
+                              <?php if (!empty($result)) : ?>
                     <div class="alert alert-success">
                         <h4>Calculation Results:</h4>
                         <?php echo $result; ?>
@@ -163,13 +105,16 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
                         <?php echo $error; ?>
                     </div>
                 <?php endif; ?>
-
-                <!-- Your form goes here -->
-                <form method="POST">
-    <div class="row">
-        <div class="col-md-6 mb-3">
-            <label for="loan_type" class="form-label">Loan Type:</label>
-            <select class="form-control" id="loan_type" name="loan_type">
+        </div>
+        <!-- Display error messages -->
+        <div class="alert alert-danger" id="error-message" style="display: none;">
+          <h4>Error:</h4>
+        </div>
+        <form id="loan-form">
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <label for="loan_type" class="form-label">Loan Type:</label>
+              <select class="form-control" id="loan_type">
                 <option value="">-Select Type-</option>
                 <option value="Staff Loan">Staff Loan</option>
                 <option value="Mortgage">Mortgage</option>
@@ -177,73 +122,71 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
                 <option value="Personal">Personal Loan</option>
                 <option value="Student">Student Loan</option>
                 <option value="Business">Business Loan</option>
-            </select>
-        </div>
-        <div class="col-md-6 mb-3">
-            <label for="interest_rate" class="form-label">Interest Rate:</label>
-            <select class="form-control" id="interest_rate" name="interest_rate">
-                            <option value="">-Select Rate-</option>
-                            <script>
-                                var interestRates = Array.from({ length: 26 }, (_, i) => (i + 1) * 0.01);
-                                interestRates.forEach(rate => {
-                                    var percentageValue = (rate * 100).toFixed(2).replace(/\.00$/, ''); // Convert to percentage and remove ".00"
-                                    document.write(`<option value="${rate.toFixed(2)}">${percentageValue}%</option>`);
-                                });
-                            </script>
-                        </select>
-                    </div>
-        <div class="col-md-6 mb-3">
-            <label for="tenor_months" class="form-label">Tenor (Months):</label>
-            <input type="number" id="tenor_months" name="tenor_months" class="form-control">
-        </div>
-        <div class="col-md-6 mb-3">
-            <label for="proposed_loan_amount" class="form-label">Proposed Loan Amount:</label>
-            <input type="number" id="proposed_loan_amount" name="proposedLoanAmount" class="form-control">
-        </div>
-        <div class="col-md-6 mb-3">
-            <label for="existing_facility_balance" class="form-label">Existing Facility Balance:</label>
-            <input type="number" id="existing_facility_balance" name="existingFacilityBalance" class="form-control">
-        </div>
-        <div class="col-md-6 mb-3">
-            <label for="abl_existing_monthly_installment" class="form-label">Crown Bank Installment:</label>
-            <input type="number" id="abl_existing_monthly_installment" name="ablExistingMonthlyInstallment" class="form-control">
-        </div>
-        <div class="col-md-6 mb-3">
-            <label for="install_with_other_banks" class "form-label">Install with Other Banks:</label>
-            <input type="number" id="install_with_other_banks" name="installWithOtherBanks" class="form-control">
-        </div>
-        <div class="col-md-6 mb-3">
-            <label for="basicsalary" class="form-label">Basic Salary:</label>
-            <input type="number" id="basicsalary" name="basicsalary" class="form-control">
-        </div>
-        <div class="col-md-6 mb-3">
-            <label for="total_allowances" class="form-label">Total Allowances:</label>
-            <input type="number" id="total_allowances" name="total_allowances" class="form-control">
-        </div>
-        <div class="col-md-6 mb-3">
-            <label for="net_salary" class="form-label">Net Salary:</label>
-            <input type="number" id="net_salary" name="netSalary" class="form-control">
-        </div>
-    </div>
-    <div class="input-group mb-5 d-flex justify-content-between">
-        <!-- Additional elements can be added here -->
-    </div>
-    <div class="input-group mb-3">
-        <button type="submit" name="submit" class="btn btn-lg btn-primary w-100 fs-6">Compute</button>
-    </div>
-    <div class="input-group mb-3">
-        <button class="btn btn-lg btn-light w-100 fs-6">
-            <span class="bi bi-bank me-2"></span>
-            <small>Book this Facility</small>
-        </button>
-    </div>
-</form>
+              </select>
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="interest_rate" class="form-label">Interest Rate:</label>
+              <select class="form-control" id="interest_rate">
+                <option value="">-Select Rate-</option>
+                <script>
+                  var interestRates = Array.from({ length: 26 }, (_, i) => (i + 1) * 0.01);
+                  interestRates.forEach(rate => {
+                    var percentageValue = (rate * 100).toFixed(2).replace(/\.00$/, ''); // Convert to percentage and remove ".00"
+                    document.write(`<option value="${rate.toFixed(2)}">${percentageValue}%</option>`);
+                  });
+                </script>
+              </select>
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="tenor_months" class="form-label">Tenor (Months):</label>
+              <input type="number" id="tenor_months" class="form-control">
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="proposed_loan_amount" class="form-label">Proposed Loan Amount:</label>
+              <input type="number" id="proposed_loan_amount" class="form-control">
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="existing_facility_balance" class="form-label">Existing Facility Balance:</label>
+              <input type="number" id="existing_facility_balance" class="form-control">
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="abl_existing_monthly_installment" class="form-label">Crown Bank Installment:</label>
+              <input type="number" id="abl_existing_monthly_installment" class="form-control">
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="install_with_other_banks" class="form-label">Install with Other Banks:</label>
+              <input type="number" id="install_with_other_banks" class="form-control">
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="basicsalary" class="form-label">Basic Salary:</label>
+              <input type="number" id="basicsalary" class="form-control">
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="total_allowances" class="form-label">Total Allowances:</label>
+              <input type="number" id="total_allowances" class="form-control">
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="net_salary" class="form-label">Net Salary:</label>
+              <input type="number" id="net_salary" class="form-control">
+            </div>
           </div>
-
-        </div>
-
+          <div class="input-group mb-5 d-flex justify-content-between">
+            <!-- Additional elements can be added here -->
+          </div>
+          <div class="input-group mb-3">
+            <button type="submit" class="btn btn-lg btn-primary w-100 fs-6">Compute</button>
+          </div>
+          <div class="input-group mb-3">
+            <button class="btn btn-lg btn-light w-100 fs-6">
+              <span class="bi bi-bank me-2"></span>
+              <small>Book this Facility</small>
+            </button>
+          </div>
+        </form>
       </div>
-    </section><!-- End Portfolio Details Section -->
+    </div>
+  </section>
+
 
 
 
@@ -309,6 +252,72 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
+  <!-- Add your JavaScript code at the end of the body tag -->
+  <script>
+    // Function to calculate the loan parameters
+    function calculateLoan() {
+      // Retrieve input values from the form
+      const loanType = document.getElementById("loan_type").value;
+      const interestRate = parseFloat(document.getElementById("interest_rate").value);
+      const tenorMonths = parseInt(document.getElementById("tenor_months").value);
+      const proposedLoanAmount = parseFloat(document.getElementById("proposed_loan_amount").value);
+      const existingFacilityBalance = parseFloat(document.getElementById("existing_facility_balance").value);
+      const ablExistingMonthlyInstallment = parseFloat(document.getElementById("abl_existing_monthly_installment").value);
+      const installWithOtherBanks = parseFloat(document.getElementById("install_with_other_banks").value);
+      const netSalary = parseFloat(document.getElementById("net_salary").value);
+      const basicSalary = parseInt(document.getElementById("basicsalary").value);
+      const totalAllowances = parseInt(document.getElementById("total_allowances").value);
+
+      // Perform the calculations here
+      const adjustedNetFixedSalary = netSalary + ablExistingMonthlyInstallment - totalAllowances;
+      const deductionLimit = basicSalary / 3;
+      const totalFacility = proposedLoanAmount + existingFacilityBalance;
+      const monthlyInstallment = totalFacility * (interestRate / 12) * Math.pow(1 + interestRate / 12, tenorMonths) / (Math.pow(1 + interestRate / 12, tenorMonths) - 1);
+      const totalDeductions = monthlyInstallment + installWithOtherBanks;
+      const netSalaryAfterDeductions = adjustedNetFixedSalary - totalDeductions;
+      const debtRatio = (1 - (netSalaryAfterDeductions / basicSalary)) * 100;
+      const grossSalary = basicSalary + totalAllowances;
+
+      // Display results
+      const resultElement = document.getElementById("calculation-results");
+      resultElement.style.display = "block";
+      resultElement.innerHTML = `
+        <p>adjustedNetFixedSalary: TZS ${adjustedNetFixedSalary.toFixed(2)}</p>
+        <p>deductionLimit : TZS ${deductionLimit.toFixed(2)}</p>
+        <p>monthlyInstallment : TZS ${monthlyInstallment.toFixed(2)}</p>
+        <p>totalDeductions: TZS ${totalDeductions.toFixed(2)}</p>
+        <p>netSalaryAfterDeductions: TZS ${netSalaryAfterDeductions.toFixed(2)}</p>
+        <p>Debt Ratio: ${debtRatio.toFixed(2)}%</p>
+        <p>Total Facility: TZS ${totalFacility.toFixed(2)}</p>
+        <p>grossSalary : TZS ${grossSalary.toFixed(2)}</p>
+      `;
+    }
+
+    // Function to handle form submission
+    function handleFormSubmit(event) {
+      event.preventDefault(); // Prevent the form from being submitted
+
+      // Reset previous messages
+      document.getElementById("calculation-results").style.display = "none";
+      document.getElementById("error-message").style.display = "none";
+
+      // Validate and calculate the loan
+      const loanType = document.getElementById("loan_type").value;
+      if (loanType === "") {
+        // Show an error message if loan type is not selected
+        const errorMessage = document.getElementById("error-message");
+        errorMessage.style.display = "block";
+        errorMessage.innerHTML = "Oops! Please select a loan type.";
+      } else {
+        calculateLoan(); // Calculate loan parameters
+      }
+    }
+
+    // Attach the form submission event handler
+    document.getElementById("loan-form").addEventListener("submit", handleFormSubmit);
+  </script>
+
+  <!-- Add your JavaScript links here -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -316,9 +325,6 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
 
 </body>
 
