--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
-      <h1 class="logo"><a href="index.php">Crowncalz</a></h1>
+      <h1 class="logo"><a href="index.html">Crowncalz</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -82,7 +82,7 @@
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>Bettter Digital Experience With Crowncalz</h1>
           <h2>We are team of talented designers making websites with Bootstrap</h2>
-          <div><a href="loancalculator.php" class="btn-get-started scrollto">Get a loan</a></div>
+          <div><a href="loancalculator.html" class="btn-get-started scrollto">Get a loan</a></div>
         </div>
         <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
           <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
