--- a/main.html
+++ b/main.html
@@ -66,7 +66,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-md navbar-light bg-light">
+  <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#">Legal Personnel</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
