--- a/index.html
+++ b/index.html
@@ -145,6 +145,71 @@
 
   <main id="main">
 
+<!-- ======= Our Services Section ======= -->
+<section id="services" class="services">
+  <div class="container">
+
+    <div class="section-title">
+      <h2>Download free Templetes</h2>
+      <p>Explore our range of services tailored to meet your digital needs. We are dedicated to delivering excellence in website designing, research consultation, and tech advisory.</p>
+    </div>
+
+    <div class="row">
+      <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
+        <div class="icon-box">
+          <div class="icon"><i class="bx bxl-dribbble"></i></div>
+          <h4 class="title"><a href="#">Website Designing</a></h4>
+          <p class="description">We create stunning and functional websites that leave a lasting impression on your audience.</p>
+          <a class="btn btn-primary" href="assets/calclator.xlsx" download>
+            <img src="assets/img/wordlogo.svg" alt="Excel Logo" width="24" height="24">
+            Download
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
+        <div class="icon-box">
+          <div class="icon"><i class="bx bx-excel"></i></div>
+          <h4 class="title"><a href="#">Tech Advisory</a></h4>
+          <p class="description">Navigate the complex world of technology with our advisory services for business growth and success.</p>
+          <a class="btn btn-primary" href="assets/calclator.xlsx" download>
+            <img src="assets/img/wordlogo.svg" alt="Excel Logo" width="24" height="24">
+            Download
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
+        <div class="icon-box">
+          <div class="icon"><i class="bx bx-excel"></i></div>
+          <h4 class="title"><a href="#">Tech Advisory</a></h4>
+          <p class="description">Navigate the complex world of technology with our advisory services for business growth and success.</p>
+          <a class="btn btn-primary" href="assets/calclator.xlsx" download>
+            <img src="assets/img/excellogo.png" alt="Excel Logo" width="24" height="24">
+            Download
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
+        <div class="icon-box">
+          <div class="icon"><i class="bx bx-tachometer"></i></div>
+          <h4 class="title"><a href="#">Tech Advisory</a></h4>
+          <p class="description">Navigate the complex world of technology with our advisory services for business growth and success.</p>
+          <a class="btn btn-primary" href="assets/calclator.xlsx" download>
+            <img src="assets/img/excellogo.png" alt="Excel Logo" width="24" height="24">
+            Download
+          </a>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section><!-- End Our Services Section -->
+
+
+
 <!-- ======= About Us Section ======= -->
 <section id="about" class="about">
   <div class="container">
