--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -28,9 +28,9 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Shuffle
+  * Template Name: Crownvalz
   * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://Crownvalz.com/bootstrap-3-one-page-template-free-shuffle/
+  * Template URL: https://Crownvalz.com/bootstrap-3-one-page-template-free-Crownvalz/
   * Author: Crownvalz.com
   * License: https://Crownvalz.com/license/
   ======================================================== -->
@@ -43,7 +43,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Shuffle</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Crownvalz</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -157,7 +157,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>Shuffle</h3>
+            <h3>Crownvalz</h3>
             <p>
               A108 Adam Street <br>
               NY 535022, USA<br><br>
@@ -210,13 +210,13 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Shuffle</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Crownvalz</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://Crownvalz.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://Crownvalz.com/bootstrap-3-one-page-template-free-shuffle/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://Crownvalz.com/bootstrap-3-one-page-template-free-Crownvalz/ -->
         Designed by <a href="https://Crownvalz.com/">Crownvalz</a>
       </div>
     </div>
